apps/zveo/infra/kubernetes/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zveo-prod
  labels:
    app.kubernetes.io/name: zveo
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
